--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "register:headless": "cross-env HEADLESS=true FEATURE_NAME=register mocha --timeout 30000 src/features/registration/registration.spec.js",
     "register:test": "cross-env HEADLESS=false FEATURE_NAME=register mocha --timeout 30000 src/features/registration/registration.spec.js",
     "open-bank-account:test": "cross-env HEADLESS=false FEATURE_NAME=open_savings_acct mocha --timeout 30000 src/features/open-bank-account/open-bank-account.spec.js",
-    "open-bank-acc:headless": "cross-env HEADLESS=false FEATURE_NAME=open_savings_acct mocha --timeout 30000 src/features/open-bank-account/open-bank-account.spec.js"
+    "open-bank-acc:headless": "cross-env HEADLESS=true FEATURE_NAME=open_savings_acct mocha --timeout 30000 --reporter mochawesome --reporter-options overwrite=false,json=false,reportFilename=open-savings-account src/features/open-bank-account/open-bank-account.spec.js"
   },
   "author": "Reginald Offemaria",
   "license": "ISC",
